# rst2txt

./: .gitignore  .travis.yml  README.rst  setup.cfg  setup.py  textwriter.py  tox.ini
rst2txt/: __init__.py  __main__.py  writer.py
tests/: test_writer.py
