[metadata]
name = rst2txt
author = Stephen Finucane
author_email = stephen@that.guru
description = Convert reStructuredText to plain text
long_description = file: README.rst
license = BSD
license_file = LICENSE
url = https://github.com/stephenfin/rst2txt
download_url = https://pypi.org/project/rst2txt
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Documentation
    Topic :: Internet :: WWW/HTTP :: Site Management
    Topic :: Printing
    Topic :: Software Development
    Topic :: Software Development :: Documentation
    Topic :: Text Processing
    Topic :: Text Processing :: General
    Topic :: Text Processing :: Markup
    Topic :: Utilities

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
setup_requires =
    setuptools>=30.3.0
    setuptools_scm
install_requires =
    docutils>=0.11
    pygments  # necessary for code-block directive, code role
    setuptools  # necessary for pkg_resources

[options.extras_require]
test =
    pytest
    pytest-cov

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 95
ignore = E116,E241,E251,E741,I101,W504
exclude = .git,.tox,.venv,.eggs,build/*,doc

[mypy]
python_version = 2.7
show_column_numbers = True
show_error_context = True
ignore_missing_imports = True
follow_imports = skip
incremental = True
check_untyped_defs = True
warn_unused_ignores = True
strict_optional = False

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning:docutils.io
